--- a/client/src/Snippets.css
+++ b/client/src/Snippets.css
@@ -23,6 +23,9 @@ li{
     background-color: bisque;
     border-radius: 4px;
 }
+.snippet-tag.active {
+    background-color: rgb(218, 255, 196);
+}
 .snippet-description{
     padding: 5px;
     background-color: rgba(255, 255, 241, 0.623);
