--- a/client/src/Snippets.css
+++ b/client/src/Snippets.css
@@ -2,16 +2,17 @@ li{
     margin-bottom: 10px;
     list-style: none;
     padding: 10px;
+
 }
 .snippet{
-    border: 1px solid;
+    box-shadow: 0 2px 10px -1px rgba(176,192,237,.22);
 }
 .edit-snippet{
     border: 3px solid rgb(255, 196, 196);
 }
 .new-snippet{
     padding: 10px;
-    border: 3px solid rgb(218, 255, 196);
+    border: 3px solid black;
     margin-top: 30px;
 }
 .snippet-title {
