--- a/client/src/Snippets.css
+++ b/client/src/Snippets.css
@@ -19,10 +19,11 @@ li{
     text-align: left;
 }
 .snippet-tag{
-    padding: 5px;
-    margin-right: 5px;
+    padding: 5px 10px;
+    margin: 5px;
     background-color: bisque;
-    border-radius: 4px;
+    border-radius: 20px;
+    display: inline-block;
 }
 .snippet-tag.active {
     background-color: rgb(218, 255, 196);
