--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -1,6 +1,8 @@
 input {
     padding: 5px;
     margin: 10px;
+    box-shadow: inset 0 0 2px 0px #f4a2a2a6;
+    border: none;   
 }
 
 .main-button {
