--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,8 @@ body {
   background-color: aliceblue;
 }
 button {
-  background-color: beige;
+  box-shadow: inset 0 0 2px 0px #f4a2a2a6;
+  border: none;
   border-radius: 4px;
   font-weight: 100;
 }
@@ -39,7 +40,9 @@ button {
 .search-bar{
   width: 85%;
   font-size: x-large;
-  box-shadow: inset 0px 0px 2px 3px aliceblue;
+  outline: none;
+  box-shadow: inset 0 0 2px 0px #f4a2a2a6;
+  border: none;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
