--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -1,7 +1,7 @@
 input {
     padding: 5px;
     margin: 10px;
-    box-shadow: inset 0 0 2px 0px #f4a2a2a6;
+    box-shadow: 0 0 13px 1px aliceblue;
     border: none;   
 }
 
@@ -13,5 +13,7 @@ input {
 }
 .sub-button {
     padding: 10px;
-    font-size: x-small;
+    font-size: x-large;
+    right: 40px;
+    position: absolute;
 }
