--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,15 +9,23 @@ body {
   background-color: aliceblue;
 }
 button {
-  box-shadow: inset 0 0 2px 0px #f4a2a2a6;
-  border: none;
+  box-shadow: 0 0 2px 2px aliceblue;
+  border: 1px solid #fffaf0; 
   border-radius: 4px;
   font-weight: 100;
+}
+
+button:hover {
+  box-shadow: 0 0 2px 2px rgb(182, 216, 247);
+}
+.warning {
+  color: #f74c4cd1;
 }
 .nav-bar{
   background-color: #fff;
   top: 0;
-  box-shadow: 0 2px 10px -1px rgba(176,192,237,.22);
+  box-shadow: 0 0 4px 4px aliceblue;
+
 
 }
 .snippet{
@@ -41,9 +49,14 @@ button {
   width: 85%;
   font-size: x-large;
   outline: none;
-  box-shadow: inset 0 0 2px 0px #f4a2a2a6;
+  box-shadow: 0 0 2px 2px aliceblue;
   border: none;
 }
+
+.search-bar:focus{
+  box-shadow: 0 0 2px 2px rgb(182, 216, 247);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
