--- a/client/src/Snippets.css
+++ b/client/src/Snippets.css
@@ -24,10 +24,11 @@ li{
     background-color: #fffaf0;
     border-radius: 20px;
     display: inline-block;
-    cursor: inherit;
+    cursor: inherit; 
 }
 .side-bar .snippet-tag{
     cursor: crosshair;
+    user-select: none;
 }
 .snippet-tag.active {
     background-color: rgb(218, 255, 196);
